<resources>
    <string name="default_web_client_id">204653107510-j5dafelkicf1pc6jn0tpijdg89uoomuq.apps.googleusercontent.com</string> <!-- Agrega esta línea -->

    <string-array name="priority_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="app_name">SortIt</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="continuar_con_correo">Continuar con correo</string>
    <string name="perfil">Perfil</string>
    <string name="usuario_1">Usuario 1</string>
    <string name="usuario1_gmail_com">usuario1@gmail.com</string>
    <string name="resumen_de_actividades">Resumen de actividades</string>
    <string name="_2">2</string>
    <string name="actividades_completadas">Actividades completadas</string>
    <string name="listar_actividades">Listar actividades</string>
    <string name="ver_m_s"><![CDATA[Ver más >]]></string>
    <string name="proyecto_progra_iii">Proyecto Progra III</string>
    <string name="_07_12">07/12</string>
    <string name="tarea_sistemas">Tarea Sistemas</string>
    <string name="editar_actividad"> Editar Actividad</string>
    <string name="_4">4</string>
    <string name="_09_12">09/12</string>
    <string name="actividades_pendientes">Actividades pendientes</string>
    <string name="app_icon">app icon</string>
    <string name="home_icon">home icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="person_icon">person icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="buscar_icon">buscar icon</string>
    <string name="pfp_icon">pfp icon</string>
    <string name="ajustes">Ajustes</string>
    <string name="cuenta">cuenta</string>
    <string name="cuentatext">Cuenta</string>
    <string name="idioma">Idioma</string>
    <string name="nightthemeicon">nightthemeicon</string>
    <string name="modo_nocturno">Modo nocturno</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="notificon">notificon</string>
    <string name="pructivityicon">pructivityicon</string>
    <string name="productividad">Productividad</string>
    <string name="logouticon">logouticon</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="felicidades_ya_diste_el_primer_paso_para_tener_una_vida_m_s_organizada">¡Felicidades! Ya diste el primer paso para tener una vida más organizada</string>
    <string name="subir_foto">Subir foto</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="abrir_sortit">Abrir SortIt</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="crea_tu_perfil">Crea tu perfil</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="icon_cameran">icon_cameran</string>
    <string name="buscar_actividad">Buscar actividad</string>
    <string name="proyecto_1">Proyecto 1</string>
    <string name="_8_00_9_00_am">8:00 - 9:00 am</string>
    <string name="recenticon">recenticon</string>
    <string name="idiomaicon">idiomaicon</string>
    <string name="todo_el_dia">Todo el día</string>
    <string name="la_paz_bolivia">La Paz, Bolivia</string>
    <string name="min_antes">10 min. antes</string>
    <string name="no_repetir">No repetir</string>
    <string name="repasar">Repasar</string>
    <string name="archivo_adjunto">Archivo adjunto</string>
    <string name="demasiado_importante">(7) Demasiado importante</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="continuar">Continuar</string>
    <string name="ubi">Ubicación</string>
    <string name="casa">Casa</string>
    <string name="empieza">Empieza</string>
    <string name="lunes">"Lun., Dic. 16 15:00"</string>
    <string name="lunes_fin">Lun., Dic. 16 16:30</string>
    <string name="notas">Notas</string>
    <string name="termina">Termina</string>
    <string name="correo">Correo</string>
    <string name="prioridad">Prioridad</string>
    <string name="titulo">Título</string>
    <string name="ubicacion">Ubicación</string>
    <string name="mail_icon">mail icon</string>
    <string name="google_logo">Google logo</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_contra">Ingrese su contraseña</string>
    <string name="arrow_door">arrow door</string>
    <string name="ingresar">INGRESAR</string>
    <string name="proximas_actividades">Próximas actividades</string>
    <string name="editar_eliminar">Editar/Eliminar</string>
    <string name="crear_nueva">Crear nueva</string>
    <string name="task_icon">task icon</string>
    <string name="tareas">Tareas</string>
    <string name="organizar">Organizar</string>
    <string name="create_task">create task</string>
    <string name="edit_delete">edit/delete</string>
    <string name="arrow_to_exit">arrow to exit</string>
    <string name="crear_nueva_actividad">Crear nueva actividad</string>
    <string name="sample_date">01/01/2000</string>
    <string name="sample_time">00:00</string>
    <string name="buscado_recientemente">Buscado recientemente</string>
    <string name="como_planeas_sortit">¿Cómo planeas usar SortIt?</string>
    <string name="elige_opciones">Elige las opciones que correspondan</string>
    <string name="usern">usern</string>
    <string name="personal">Personal</string>
    <string name="workn">workn</string>
    <string name="trabajo">Trabajo</string>
    <string name="academicn">academicn</string>
    <string name="educacion">Educación</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="create_account_logo">create_account_logo</string>
    <string name="date">Date</string>
    <string name="title_task">TITLE_TASK</string>
    <string name="time">Time</string>
    <string name="actividades">Actividades</string>
    <string name="ok">OK</string>
    <string name="crear_nueva_tarea">Crear nueva tarea</string>
    <string name="cola_de_prioridad">Cola de prioridad</string>
    <string name="fecha">Fecha</string>
</resources>