<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/searchActivity"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/buscar_actividad"
        android:background="@drawable/rounded_searchbar"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/text_semibold"
        android:inputType="text"
        android:autofillHints=""/>

    <ImageView
        android:id="@+id/icon_buscar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/buscar_icon"
        android:src="@drawable/searchn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"/>

    <ImageView
        android:id="@+id/icon_settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/settings_icon"
        android:src="@drawable/settingsn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:id="@+id/txtRecentlySearched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscado_recientemente"
        android:layout_marginTop="20dp"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/searchActivity"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/text_semibold"
        />

    <LinearLayout
        android:id="@+id/projectList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtRecentlySearched">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/recenticon"
                android:src="@drawable/recentn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proyecto_1"
                    style="@style/text_bold_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_00_9_00_am"
                    style="@style/text_small"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/purplebar"
        app:cardCornerRadius="17dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/home_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/homen" />

            <ImageView
                android:id="@+id/calendar_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/calendar_icon"
                android:src="@drawable/calendarn" />

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/person_icon"
                android:src="@drawable/usrn" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>