<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/crea_tu_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title_bold_big" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/felicidades_ya_diste_el_primer_paso_para_tener_una_vida_m_s_organizada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        style="@style/text_normal_gray" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:cardBackgroundColor="@color/darkpurple"
        app:cardCornerRadius="18dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tu_perfil"
                android:layout_gravity="center"
                style="@style/title_bold"
                />

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/pfpicon"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/foto_de_perfil" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upload_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_upload_photo"
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/purplebar"
                    android:gravity="center"
                    android:text="@string/subir_foto"
                    app:cornerRadius="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/text_bold_medium"/>

                <ImageView
                    android:id="@+id/icon_camera"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon_cameran"
                    android:src="@drawable/cameran"
                    app:layout_constraintTop_toTopOf="@id/button_upload_photo"
                    app:layout_constraintBottom_toBottomOf="@id/button_upload_photo"
                    app:layout_constraintStart_toStartOf="@id/button_upload_photo"
                    android:layout_marginStart="32dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/name_field"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:autofillHints="Ingresa tu Nombre"
                android:hint="@string/ingresa_tu_nombre"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:layout_marginHorizontal="16dp"
                android:padding="16dp"
                android:background="@drawable/rounded_border"
                app:layout_constraintTop_toBottomOf="@id/upload_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/text_normal_gray"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/open_sortit_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purplebar"
        android:text="@string/abrir_sortit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/text_bold_medium"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
