<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/purplebar"
        app:cardCornerRadius="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/home_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/homen" />

            <ImageView
                android:id="@+id/calendar_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/calendar_icon"
                android:src="@drawable/calendarn" />

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="43dp"
                android:contentDescription="@string/person_icon"
                android:src="@drawable/usrn" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
