<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fields"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/sortiticon"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:padding="30dp"
            android:layout_height="480dp"
            app:cardBackgroundColor="@color/card_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="2dp"
            >


            <androidx.cardview.widget.CardView
                android:layout_marginBottom="20dp"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/ingrese_su_nombre"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:paddingStart="20dp"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/ingrese_su_correo"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:paddingStart="20dp"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/ingrese_su_contra"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:paddingStart="20dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:id="@+id/confirmPasswordInput"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/confirmar_contra"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:paddingStart="20dp"
                    />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:contentDescription="@string/create_account_logo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="@id/SignUpButton"
                app:layout_constraintTop_toTopOf="@id/SignUpButton"
                app:layout_constraintBottom_toBottomOf="@id/SignUpButton"
                android:src="@drawable/signinicon"
                android:elevation="2dp"
                android:layout_marginStart="55dp"
                />
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/SignUpButton"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/crear_cuenta"
                app:cornerRadius = "15dp"
                android:textSize="20sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
