<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_marginBottom="10dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="170dp"
        android:background="@color/black"
        android:orientation="horizontal">
        <!-- ITEM
            Cambiar por RecyclerView
        -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/darkpurple"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <!--<RadioButton
                    android:id="@+id/statusbtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="15dp"
                    android:checked="true"
                    />-->
                <CheckBox
                    android:id="@+id/done"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/title_task"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/done"
                    app:layout_constraintTop_toTopOf="parent" />
                <!--<androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="15dp"
                    >-->
                <!--<ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/warningstatusicon"
                        />-->
                <TextView
                    android:id="@+id/notes"
                    android:layout_width="190dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/notas"
                    android:textColor="@color/darkgray"
                    app:layout_constraintStart_toEndOf="@id/done"
                    app:layout_constraintTop_toBottomOf="@id/title_task" />

                <TextView
                    android:id="@+id/datetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/timetext" />

                <TextView
                    android:id="@+id/timetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <!--<androidx.cardview.widget.CardView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/green"
                    app:layout_constraintStart_toEndOf="@+id/datetext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="20dp"
                    />-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>